availability time update

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL="postgresql://neondb_owner:npg_fha53NmqtcSl@ep-white-sunset-a5uf7anh-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=postgresql://user:password@localhost:5432/database
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM_EMAIL=noreply@localhost
+HOST_URL=http://localhost:3000
+NODE_ENV=development
