--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/database
+DATABASE_URL=postgresql://neondb_owner:npg_fha53NmqtcSl@ep-white-sunset-a5uf7anh-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
 SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_FROM_EMAIL=noreply@localhost
 HOST_URL=http://localhost:3000
