--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx -r dotenv/config server/index.ts",
+    "dev:prod": "NODE_ENV=production tsx -r dotenv/config server/index.ts",
+    "production": "bash scripts/production-replit.sh",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
