--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:migrate": "tsx scripts/run-migrations.ts",
+    "db:migrate": "node scripts/run-migrations.cjs",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:availability": "vitest run server/src/services/availability.test.ts"
