--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_FROM_EMAIL=noreply@localhost
 HOST_URL=http://localhost:3000
 NODE_ENV=development
+JWT_SECRET=your-jwt-secret-key-change-in-production
