--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "tsx -r dotenv/config server/index.ts",
     "dev:prod": "NODE_ENV=production tsx -r dotenv/config server/index.ts",
