--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.soft.json",
+    "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx --fix",
     "db:push": "drizzle-kit push",
     "db:migrate": "node scripts/run-migrations.cjs",
     "test": "vitest",
@@ -27,6 +29,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@eslint/js": "^9.29.0",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
@@ -74,6 +77,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/react": "^16.3.0",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/papaparse": "^5.3.15",
@@ -96,6 +100,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "glob": "^11.0.3",
     "input-otp": "^1.2.4",
     "jest": "^29.7.0",
     "jsbarcode": "^3.11.6",
@@ -123,6 +128,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.3.2",
     "vaul": "^1.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.2",
     "xlsx": "^0.18.5",
