--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.soft.json",
+    "typecheck": "tsc -p tsconfig.server.json",
     "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx --fix",
     "db:push": "drizzle-kit push",
@@ -38,7 +39,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
-    "@neondatabase/serverless": "^0.10.4",
+    "@neondatabase/serverless": "^0.8.0",
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@nivo/heatmap": "^0.99.0",
