--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'pnpm'
+          #cache: 'pnpm'
       - run: corepack enable     # downloads pnpm 10.x declared in packageManager
 
       # ④  Install deps
