--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.3",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
@@ -159,6 +160,7 @@
     "eslint": "^9.29.0",
     "madge": "^8.0.0",
     "postcss": "^8.4.47",
+    "supertest": "^7.1.1",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.4",
     "typescript": "5.6.3",
