--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "supertest": "^7.1.1",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.4",
+    "turbo": "^2.5.4",
     "typescript": "5.6.3",
     "vite": "^5.4.14",
     "vitest": "^3.1.3"
