--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.soft.json",
-    "typecheck": "tsc -p tsconfig.server.json",
+    "typecheck": "tsc -p tsconfig.soft.json",
     "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx --fix",
     "db:push": "drizzle-kit push",
