--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "eslint": "^9.29.0",
+    "eslint-plugin-jest": "^29.0.1",
     "madge": "^8.0.0",
     "postcss": "^8.4.47",
     "supertest": "^7.1.1",
