--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "esbuild": "^0.25.0",
     "eslint": "^9.29.0",
     "eslint-plugin-jest": "^29.0.1",
+    "globals": "^16.2.0",
     "madge": "^8.0.0",
     "postcss": "^8.4.47",
     "supertest": "^7.1.1",
