--- a/package.json
+++ b/package.json
@@ -82,13 +82,16 @@
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/react": "^16.3.0",
     "@types/glob": "^8.1.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/papaparse": "^5.3.15",
     "@types/qrcode": "^1.5.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-window": "^1.8.8",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
+    "bullmq": "^5.56.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -106,6 +109,7 @@
     "framer-motion": "^11.13.1",
     "glob": "^11.0.3",
     "input-otp": "^1.2.4",
+    "ioredis": "^5.6.1",
     "jest": "^29.7.0",
     "jsbarcode": "^3.11.6",
     "lodash.debounce": "^4.0.8",
@@ -120,6 +124,7 @@
     "qrcode.react": "^4.2.0",
     "quagga": "^0.12.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
