feat(dev): wire client + server, enable BullMQ, switch CI to pnpm
• adds concurrent dev script that runs Vite + Express
• swaps CalendarPage to EnhancedCalendarView
• logs BullMQ startup; warns if REDIS_URL absent
• CI workflow now uses pnpm
• .env.example now documents REDIS_URL
• enables live drag-and-drop calendar + notification queue in Replit

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,33 @@
 # Database Configuration
+DATABASE_URL="postgresql://username:password@localhost:5432/dock_optimizer"
+
+# Redis Configuration (for BullMQ job queue)
+REDIS_URL="rediss://<your-upstash-url>:6379"
+REDIS_HOST="localhost"  
+REDIS_PORT="6379"
+REDIS_PASSWORD=""
+
+# Application Configuration
+NODE_ENV="development"
+PORT="5001"
+SESSION_SECRET="your-session-secret-here"
+
+# Email Configuration (SendGrid)
+SENDGRID_API_KEY="your-sendgrid-api-key"
+FROM_EMAIL="noreply@yourdomain.com"
+
+# File Upload Configuration
+MAX_FILE_SIZE="10MB"
+ALLOWED_FILE_TYPES="pdf,jpg,jpeg,png,doc,docx"
+
+# Security Configuration
+BCRYPT_ROUNDS="10"
+JWT_SECRET="your-jwt-secret-here"
+
+# Feature Flags
+ENABLE_WEBSOCKETS="true"
+ENABLE_NOTIFICATIONS="true"
+ENABLE_FILE_UPLOADS="true"
+
+# Logging Configuration  
+LOG_LEVEL="info"
