--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test:ci": "vitest run --exclude '**/*.int.test.ts' --exclude '**/*.jest.test.ts'",
     "test:ci:watch": "vitest watch --exclude '**/*.int.test.ts' --exclude '**/*.jest.test.ts'",
-    "dev": "tsx -r dotenv/config server/index.ts",
+    "dev:server": "tsx -r dotenv/config server/index.ts",
+    "dev:client": "vite",
+    "dev": "concurrently -k -n server,client -c green,cyan \"npm:dev:server\" \"npm:dev:client\"",
     "dev:prod": "NODE_ENV=production tsx -r dotenv/config server/index.ts",
     "production": "bash scripts/production-replit.sh",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
@@ -147,6 +149,7 @@
     "@jest/globals": "^30.0.3",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    "concurrently": "^8.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
