--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-window": "^1.8.8",
+    "@uploadthing/react": "^7.3.2",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "bullmq": "^5.56.0",
@@ -129,6 +130,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
@@ -149,7 +151,6 @@
     "@jest/globals": "^30.0.3",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "concurrently": "^8.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
@@ -165,6 +166,7 @@
     "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^3.1.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "eslint": "^9.29.0",
