--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "jsbarcode": "^3.11.6",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.453.0",
+    "luxon": "^3.6.1",
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
@@ -155,6 +156,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/luxon": "^3.6.2",
     "@types/mime-types": "^3.0.1",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
