fix(qr-scanner): replace quagga with @zxing/browser & prevent blank screen

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-window": "^1.8.8",
     "@uploadthing/react": "^7.3.2",
+    "@zxing/browser": "^0.1.5",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "bullmq": "^5.56.0",
@@ -126,7 +127,6 @@
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "quagga": "^0.12.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
