--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "e2e:modules": "cypress run --spec cypress/e2e/module_toggles.spec.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.840.0",
+    "@aws-sdk/client-sts": "^3.840.0",
+    "@aws-sdk/s3-request-presigner": "^3.840.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
