feat: integrate Doppler secrets management with Replit fallback
- Add Doppler configuration (.doppler.yaml) for multi-environment support
- Remove .env file to prevent hardcoded secrets
- Update production script with Doppler integration and Replit fallback
- Fix ES module error by removing problematic module.exports
- Add Doppler npm scripts for production deployment
- Environment variables now loaded via Doppler CLI or Replit secrets

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev:server": "tsx -r dotenv/config server/index.ts",
     "dev:client": "vite",
     "dev": "concurrently -k -n server,client -c green,cyan \"npm:dev:server\" \"npm:dev:client\"",
-    "dev:prod": "NODE_ENV=production tsx -r dotenv/config server/index.ts",
+    "dev:prod": "NODE_ENV=production doppler run -- tsx server/index.ts",
     "production": "bash scripts/production-replit.sh",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
+    "start:doppler": "NODE_ENV=production doppler run --config prd -- node dist/index.js",
     "check": "tsc -p tsconfig.soft.json",
     "typecheck": "tsc -p tsconfig.soft.json",
     "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx",
