feat: Redis implementation improvements and health check
- Create shared Redis configuration module (server/src/lib/redis.ts)
- Add Redis health check script (tools/redisHealth.ts)
- Update notification queue with fallback handling when Redis unavailable
- Add redis:health npm script for connection testing
- Create comprehensive Redis setup guide (REDIS_SETUP_GUIDE.md)
- Fix notification queue to work gracefully without Redis
- Add proper error handling and logging for Redis operations

The application now works correctly whether Redis is enabled or disabled,
with automatic fallback to immediate processing when Redis is unavailable.
Redis provides better reliability and scalability for notification processing.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "e2e": "cypress run --spec cypress/e2e/**/*.spec.ts",
     "e2e:booking": "cypress run --spec cypress/e2e/booking-flow.spec.ts",
     "e2e:debug": "cypress open --spec cypress/e2e/debugging-breakpoints.spec.ts --env DEBUG_MODE=true",
-    "e2e:modules": "cypress run --spec cypress/e2e/module_toggles.spec.ts"
+    "e2e:modules": "cypress run --spec cypress/e2e/module_toggles.spec.ts",
+    "redis:health": "tsx tools/redisHealth.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.840.0",
