--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "lucide-react": "^0.453.0",
     "luxon": "^3.6.1",
     "memorystore": "^1.6.7",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.5.2",
@@ -148,6 +149,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^4.1.4",
     "ts-jest": "^29.3.2",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.2",
