--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,5 +56,8 @@ jobs:
       - name: Unit tests
         run: pnpm test:ci
 
-      - name: Lint & type-check
-        run: pnpm turbo lint typecheck
+      - name: Lint
+        run: pnpm lint
+
+      - name: Type check
+        run: pnpm typecheck
