feat: Add comprehensive production setup system for Neon database seeding
- Create PRODUCTION_SETUP_CHECKLIST.md with complete deployment guide
- Add production setup script (scripts/production-setup.sh) for automated setup
- Add npm scripts for production database setup and verification
- Comprehensive checklist covers:
  - Environment variable configuration
  - Database seeding steps (holidays, organizations, users, appointment types)
  - Feature verification checklist
  - Persistent data storage validation
  - Ronald McDonald House Philadelphia specific setup
  - Troubleshooting guide
  - Post-launch monitoring

Ready for production deployment with:
- npm run db:seed (holiday seeding)
- npm run db:setup-production (comprehensive setup)
- npm run db:check-production (readiness verification)
- npm run setup-production (complete automated setup)

Ensures persistent data storage and proper organization branding for launch.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "node scripts/run-migrations.cjs",
     "db:seed": "tsx server/seeds/20250623_us_holidays.ts",
+    "db:setup-production": "tsx server/scripts/comprehensive-production-fixes.ts",
+    "db:check-production": "tsx server/scripts/production-readiness-check.ts",
+    "setup-production": "bash scripts/production-setup.sh",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:availability": "vitest run server/src/services/availability.test.ts",
