feat: production-ready release with authentication and environment fixes

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,54 @@
-# Database Configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/dock_optimizer"
+# Dock Optimizer Environment Configuration
+# 
+# 🔒 SECURITY NOTICE:
+# - In production, sensitive values are managed by Doppler
+# - This file contains safe defaults for local development
+# - Never commit actual secrets to this file
 
-# Redis Configuration (for BullMQ job queue)
-REDIS_URL="rediss://<your-upstash-url>:6379"
-REDIS_HOST="localhost"  
-REDIS_PORT="6379"
-REDIS_PASSWORD=""
+# ===================
+# CRITICAL (Required) - Managed by Doppler in Production
+# ===================
 
-# Application Configuration
+# Database (Neon PostgreSQL)
+DATABASE_URL="postgresql://username:password@host:port/database?sslmode=require"
+
+# Email Service (SendGrid) 
+SENDGRID_API_KEY="SG.your-sendgrid-api-key"
+SENDGRID_FROM_EMAIL="noreply@yourdomain.com"
+
+# Security Secrets
+SESSION_SECRET="your-session-secret"
+JWT_SECRET="your-jwt-secret"
+JWT_PRIVATE_KEY="your-jwt-private-key"
+
+# ===================
+# AWS S3 (Optional) - Graceful fallback to local storage
+# ===================
+
+AWS_S3_BUCKET="dock-optimizer-prod"
+AWS_ACCESS_KEY_ID="your-access-key-id"
+AWS_SECRET_ACCESS_KEY="your-secret-access-key"
+AWS_REGION="us-east-1"
+
+# ===================
+# Application Settings (Safe to commit)
+# ===================
+
 NODE_ENV="development"
 PORT="5001"
-SESSION_SECRET="your-session-secret-here"
+HOST_URL="http://localhost:5001"
 
-# Email Configuration (SendGrid)
-SENDGRID_API_KEY="your-sendgrid-api-key"
-FROM_EMAIL="noreply@yourdomain.com"
+# ===================
+# Redis (Optional) - Managed by Doppler in Production
+# ===================
 
-# File Upload Configuration
-MAX_FILE_SIZE="10MB"
-ALLOWED_FILE_TYPES="pdf,jpg,jpeg,png,doc,docx"
+REDIS_URL="redis://localhost:6379"
 
-# Security Configuration
-BCRYPT_ROUNDS="10"
-JWT_SECRET="your-jwt-secret-here"
+# ===================
+# Feature Flags (Safe to commit)
+# ===================
 
-# Feature Flags
-ENABLE_WEBSOCKETS="true"
-ENABLE_NOTIFICATIONS="true"
-ENABLE_FILE_UPLOADS="true"
-
-# Logging Configuration  
-LOG_LEVEL="info"
+ENABLE_EMAIL_NOTIFICATIONS="true"
+ENABLE_ASSET_MANAGER="true"
+ENABLED_MODULES="companyAssets,calendar,analytics,bookingPages,emailNotifications"
+ENFORCE_WEEKEND_RULE="true"
