--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "puppeteer": "^24.14.0",
+    "puppeteer-core": "^24.14.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
