--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=20.0.0 <=22.0.0"
+    "node": ">=20 <=24"
   },
   "scripts": {
     "dev": "CHOKIDAR_USEPOLLING=1 doppler run -- concurrently -n \"VITE,API\" -c \"cyan,green\" \"vite\" \"SKIP_INTERNAL_VITE=1 nodemon --legacy-watch --ext ts,js --watch server --watch shared --signal SIGTERM --exec \\\"tsx server/index.ts\\\"\"",
@@ -133,10 +133,16 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/busboy": "^1.5.4",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "20.16.11",
+    "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -150,9 +156,10 @@
     "postcss": "^8.4.47",
     "rxjs": "7.8.1",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "5.6.3",
+    "typescript": "5.5.4",
     "vite": "^5.4.14",
     "vitest": "^3.1.3"
   },
