--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,7 +6,7 @@
     "noEmitOnError": false,
     "outDir": "dist/server",
 
-    "module": "CommonJS",
+    "module": "es2022",
     "moduleResolution": "Node",
     "target": "ES2020",
 
@@ -14,9 +14,10 @@
     "allowImportingTsExtensions": false,
 
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["node", "jest"]
   },
 
-  "include": ["server/**/*", "shared/**/*"],
-  "exclude": ["client", "scripts", "**/*.test.*"]
+  "include": ["server/**/*", "shared/**/*", "scripts/**/*"],
+  "exclude": ["client", "**/*.test.*"]
 }
