--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.29.0",
+    "glob": "^11.0.3",
     "nodemon": "^3.1.10",
     "postcss": "^8.4.47",
     "rxjs": "7.8.1",
