--- a/package.json
+++ b/package.json
@@ -136,7 +136,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "20.16.11",
+    "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
