fix(types): update module to ES2022 for import.meta support (-14 errors)
• Changed module from CommonJS to ES2022
• Resolves TS1343 import.meta meta-property errors
• Enables modern ES module features in server code

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,7 +6,7 @@
     "noEmitOnError": false,
     "outDir": "dist/server",
 
-    "module": "CommonJS",
+    "module": "ES2022",
     "moduleResolution": "Node",
     "target": "ES2020",
 
