build: add explicit @/* path aliases for Vite + TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "baseUrl": ".",
     "types": ["node", "vite/client"],
     "paths": {
-      "@/*": ["./client/src/*"],
+      "@/*":           ["./client/src/*"],
+      "@components/*": ["./client/src/components/*"],
+      "@pages/*":      ["./client/src/pages/*"],
+      "@lib/*":        ["./client/src/lib/*"],
       "@shared/*": ["./shared/*"]
     }
   }
