--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
     "node": ">=20.0.0 <=22.0.0"
   },
   "scripts": {
-    "dev": "CHOKIDAR_USEPOLLING=1 doppler run -- concurrently -n \"VITE,API\" -c \"cyan,green\" \"vite\" \"SKIP_INTERNAL_VITE=1 nodemon --legacy-watch --ext ts,js --watch server --watch shared --signal SIGTERM --exec \\\"tsx server/index.ts\\\"\"",
-    "build:client": "vite build --emptyOutDir",
-    "build:server": "echo 'Skipping server build – handled at runtime with tsx'",
-    "build": "NODE_OPTIONS=\"--max-old-space-size=4096\" pnpm run build:client && pnpm run build:server",
-    "start": "doppler run --config prd -- tsx server/index.ts",
-    "preview": "doppler run -- vite preview",
-    "test": "vitest run",
-    "lint": "eslint . --ext .ts,.tsx",
-    "drizzle:generate": "npx drizzle-kit generate",
-    "drizzle:push": "npx drizzle-kit push"
+    "ts:bootstrap": "pnpm add -D ts-migrate ts-autofix eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin ts-node",
+    "ts:migrate": "ts-migrate-full .",
+    "ts:autofix": "ts-autofix --apply --project tsconfig.server.json",
+    "ts:lintfix": "eslint \"src/**/*.{ts,tsx}\" --fix --quiet",
+    "ts:codemods": "ts-node scripts/*.ts || true",
+    "ts:cleanup": "pnpm run ts:migrate && pnpm run ts:autofix && pnpm run ts:lintfix && pnpm run ts:codemods"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.840.0",
@@ -135,27 +131,38 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
     "@types/mime-types": "^3.0.1",
     "@types/node": "20.16.11",
+    "@types/papaparse": "^5.3.16",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.29.0",
     "glob": "^11.0.3",
     "globby": "^14.1.0",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.4.47",
+    "react-beautiful-dnd": "^13.1.1",
     "rxjs": "7.8.1",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.14",
+    "ts-autofix": "^1.0.0",
+    "ts-migrate": "^0.1.35",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "5.6.3",
