--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:client": "vite",
     "dev:server": "tsx watch server/index.ts",
     "dev": "concurrently \"pnpm run dev:client\" \"pnpm run dev:server\"",
-    "start": "node dist/index.js",
+    "start": "node dist/server/server/index.js",
     "ts:bootstrap": "pnpm add -D ts-migrate ts-autofix eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin ts-node",
     "ts:migrate": "ts-migrate-full .",
     "ts:autofix": "ts-autofix --apply --project tsconfig.server.json",
