fix(build): use production TypeScript config\n\n- Changed build:server to use tsconfig.build.json\n- Excludes test files from production build\n- Ensures clean compilation for App Runner

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build:client": "vite build",
-    "build:server": "npx tsc -p tsconfig.server.json",
+    "build:server": "npx tsc -p tsconfig.build.json",
     "build": "pnpm run build:client && pnpm run build:server",
     "dev:client": "vite",
     "dev:server": "tsx watch server/index.ts",
